--- a/semantic-elements1.html
+++ b/semantic-elements1.html
@@ -7,9 +7,12 @@
   </head>
 
   <body>
-    <h1>  My favorite Superheroes: A semantic Webpage</h1>
-    <h2> DC heroes</h2>
-    <p><em> DC super heroes are the best.</em><br> The story lines are <u>complex, and often address real life issues.</u> <strong>My favorite is ...</strong></p>
+    <h1>  About US</h1>
+    <h2> <em>Miko & Puggy</em></h2>
+
+    <p> I am <em>Miko</em> and I am a 1 year olf French Bulldog.</em><br> I am the youngere <u>"sister' of PUGGY".</u> <strong>I eat, sleep, and PLAY a lot!</strong></p>
+    <p></p>
+    <p> Puggy is a Boston Terrier. My mom found Puggy wandering around the neighborhood. Puggy was surrendered to the local animal control in case somebody might be looking for her but nobody claimed her. Eventually, big sister Puggy was adopted by my mom."</p>
 
     <h3>Marvel heroes or <small>whatever</small></h3>
     <p><q> Marvel super heroes feel more 2- dimensional.</q> However, Marvel is really killing it in the tv and film industry</p>
