--- a/Lesson02-Assignment.html
+++ b/Lesson02-Assignment.html
@@ -13,9 +13,9 @@
 
     <h1>MIKO & PUGGY's Adventures</h1>
 
-    <a href="index.html"><img src="home-button.png" alt="index.html" style="width:42px;height:42px;border:0;" title=HOME></a>
-    <a href="semantic-elements1.html"><img src="about-us-two-dogs.jpg" alt="semantic-elements1.html" style="width:42px;height:42px;border:0;" title="About Us"></a>
-    <a href="https://www.lipsum.com"><img src="about-mom.jpg" alt="https://www.lipsum.com" style="width:42px;height:42px;border:0;" title="Our MOM"></a>
+    <a href="index.html"><img src="home-button.png" alt="index.html" style="width:80px;height:80px;border:0;" title=HOME></a>
+    <a href="semantic-elements1.html"><img src="about-us-two-dogs.jpg" alt="semantic-elements1.html" style="width:80px;height:80px;border:0;" title="About Us"></a>
+    <a href="https://www.lipsum.com"><img src="about-mom.jpg" alt="https://www.lipsum.com" style="width:80px;height:80px;border:0;" title="Our MOM"></a>
   <br>
 
   <!--
@@ -51,6 +51,9 @@
     <article>
       <h3> ipso header</h3>
       <p> Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse nec mauris ut felis commodo interdum. Phasellus fringilla sodales quam, quis aliquam lectus vulputate ut. Ut varius lobortis ante, interdum mollis nisl consequat at. Nullam vitae tincidunt ipsum. Nullam tincidunt molestie venenatis. Quisque mattis luctus mattis. Donec faucibus efficitur dolor. Etiam facilisis, erat non ultricies venenatis, elit tellus interdum est, non tempus nunc urna a odio. Mauris sagittis accumsan cursus. Vivamus nibh mauris, congue bibendum tempor ac, facilisis sit amet sem. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos.</p>
+
+      <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse nec mauris ut felis commodo interdum. Phasellus fringilla sodales quam, quis aliquam lectus vulputate ut. Ut varius lobortis ante, interdum mollis nisl consequat at. Nullam vitae tincidunt ipsum. Nullam tincidunt molestie venenatis. Quisque mattis luctus mattis. Donec faucibus efficitur dolor. Etiam facilisis, erat non ultricies venenatis, elit tellus interdum est, non tempus nunc urna a odio. Mauris sagittis accumsan cursus. Vivamus nibh mauris, congue bibendum tempor ac, facilisis sit amet sem. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos.Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse nec mauris ut felis commodo interdum. Phasellus fringilla sodales quam, quis aliquam lectus vulputate ut. Ut varius lobortis ante, interdum mollis nisl consequat at. Nullam vitae tincidunt ipsum. Nullam tincidunt molestie venenatis. Quisque mattis luctus mattis. Donec faucibus efficitur dolor. Etiam facilisis, erat non ultricies venenatis, elit tellus interdum est, non tempus nunc urna a odio. Mauris sagittis accumsan cursus. Vivamus nibh mauris, congue bibendum tempor ac, facilisis sit amet sem. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos.</p>
+      
     </article>
 
     <aside>
