update image with feedback icon

--- a/Lesson02-Assignment.html
+++ b/Lesson02-Assignment.html
@@ -16,6 +16,7 @@
     <a href="index.html"><img src="home-button.png" alt="index.html" style="width:80px;height:80px;border:0;" title=HOME></a>
     <a href="semantic-elements1.html"><img src="about-us-two-dogs.jpg" alt="semantic-elements1.html" style="width:80px;height:80px;border:0;" title="About Us"></a>
     <a href="https://www.lipsum.com"><img src="about-mom.jpg" alt="https://www.lipsum.com" style="width:80px;height:80px;border:0;" title="Our MOM"></a>
+    <a href="https://www.lipsum.com"><img src="feedback-icon.jpg" alt="https://www.lipsum.com" style="width:80px;height:80px;border:0;" title="Email us"></a>
   <br>
 
   <!--
