update & insert image file for semantic html

--- a/semantic-elements1.html
+++ b/semantic-elements1.html
@@ -7,7 +7,11 @@
   </head>
 
   <body>
+
     <h1>  About US</h1>
+    <img src="about-us-two-dogs.jpg" alt="semantic-elements1.html" style="width:80px;height:80px;border:0;" title="About Us">
+
+
     <h2> <em>Miko & Puggy</em></h2>
 
     <p> I am <em>Miko</em> and I am a 1 year olf French Bulldog.</em><br> I am the youngere <u>"sister' of PUGGY".</u> <strong>I eat, sleep, and PLAY a lot!</strong></p>
