--- a/Lesson02-Assignment.html
+++ b/Lesson02-Assignment.html
@@ -13,10 +13,10 @@
 
     <h1>MIKO & PUGGY's Adventures</h1>
 
-    <a href="index.html"><img src="home-button.png" alt="index.html" style="width:80px;height:80px;border:0;" title=HOME></a>
-    <a href="semantic-elements1.html"><img src="about-us-two-dogs.jpg" alt="semantic-elements1.html" style="width:80px;height:80px;border:0;" title="About Us"></a>
-    <a href="https://www.lipsum.com"><img src="about-mom.jpg" alt="https://www.lipsum.com" style="width:80px;height:80px;border:0;" title="Our MOM"></a>
-    <a href="https://www.lipsum.com"><img src="feedback-icon.jpg" alt="https://www.lipsum.com" style="width:80px;height:80px;border:0;" title="Email us"></a>
+    <a href="index.html"><img src="IMAGES/home-button.png" alt="index.html" style="width:80px;height:80px;border:0;" title=HOME></a>
+    <a href="semantic-elements1.html"><img src="IMAGES/about-us-two-dogs.jpg" alt="semantic-elements1.html" style="width:80px;height:80px;border:0;" title="About Us"></a>
+    <a href="https://www.lipsum.com"><img src="IMAGES/about-mom.jpg" alt="https://www.lipsum.com" style="width:80px;height:80px;border:0;" title="Our MOM"></a>
+    <a href="https://www.lipsum.com"><img src="IMAGES/feedback-icon.jpg" alt="https://www.lipsum.com" style="width:80px;height:80px;border:0;" title="Email us"></a>
   <br>
 
   <!--
@@ -44,7 +44,7 @@
   -->
 <p></p>
 <p></p>
-    <img src="Miko_Puggy.JPG" width="750"  height="333" alt="An adorable French Bulldog and Boston Terrier">
+    <img src="IMAGES/Miko_Puggy.JPG" width="750"  height="333" alt="An adorable French Bulldog and Boston Terrier">
   </header>
 
   <section>
