update semantic-elements1.html with jpeg icon

--- a/semantic-elements1.html
+++ b/semantic-elements1.html
@@ -9,7 +9,7 @@
   <body>
 
     <h1>  About US</h1>
-    <img src="about-us-two-dogs.jpg" alt="semantic-elements1.html" style="width:80px;height:80px;border:0;" title="About Us">
+    <img src="IMAGES/about-us-two-dogs.jpg" alt="semantic-elements1.html" style="width:80px;height:80px;border:0;" title="About Us">
 
 
     <h2> <em>Miko & Puggy</em></h2>
