update all files

--- a/Lesson02-Assignment.html
+++ b/Lesson02-Assignment.html
@@ -1,82 +1,80 @@
 
-<!DOCTYPE html>
-<html lang="en">
 
- <head>
-      <meta charset="utf-8">
-      <title>Lesson02-Assignment</title>
-  </head>
+      <!DOCTYPE html>
+      <html lang="en">
 
-  <body>
+       <head>
+            <meta charset="utf-8">
+            <title>Lesson02-Assignment</title>
+        </head>
+<link rel="stylesheet" type="text/css" href="STYLES/styles.css"
+        <body>
+      <link rel="stylesheet" type="text/css" href="STYLES/styles.css"
+        <header>
 
-  <header>
+          <h1>MIKO & PUGGY's Adventures</h1>
 
-    <h1>MIKO & PUGGY's Adventures</h1>
+          <a href="index.html"><img src="IMAGES/home-button.png" alt="index.html" style="width:80px;height:80px;border:0;" title=HOME></a>
+          <a href="semantic-elements1.html"><img src="IMAGES/about-us-two-dogs.jpg" alt="semantic-elements1.html" style="width:80px;height:80px;border:0;" title="About Us"></a>
+          <a href="https://www.lipsum.com"><img src="IMAGES/about-mom.jpg" alt="https://www.lipsum.com" style="width:80px;height:80px;border:0;" title="Our MOM"></a>
+          <a href="https://www.lipsum.com"><img src="IMAGES/feedback-icon.jpg" alt="https://www.lipsum.com" style="width:80px;height:80px;border:0;" title="Email us"></a>
+        <br>
 
-    <a href="index.html"><img src="IMAGES/home-button.png" alt="index.html" style="width:80px;height:80px;border:0;" title=HOME></a>
-    <a href="semantic-elements1.html"><img src="IMAGES/about-us-two-dogs.jpg" alt="semantic-elements1.html" style="width:80px;height:80px;border:0;" title="About Us"></a>
-    <a href="https://www.lipsum.com"><img src="IMAGES/about-mom.jpg" alt="https://www.lipsum.com" style="width:80px;height:80px;border:0;" title="Our MOM"></a>
-    <a href="https://www.lipsum.com"><img src="IMAGES/feedback-icon.jpg" alt="https://www.lipsum.com" style="width:80px;height:80px;border:0;" title="Email us"></a>
-  <br>
+        <!--
+        <nav>
+            <a href="index.html">
+             <img src="home-button.png" alt="index.html" style="width:42px;height:42px;border:0;" title=HOME>
+             <p> HOME</p>
+           </a>
+         </nav>
+          <nav>
+             <a href="semantic-elements1.html">
+              <img src="about-us-two-dogs.jpg"  alt="semantic-elements1.html" style="width:42px;height:42px;border:0;">
+              <p>About Us</p>
+            </a>
+          </nav>
+          <nav>
+            <a href="https://www.lipsum.com">
+              <img src="about-mom.jpg"  alt="https://www.lipsum.com" style="width:42px;height:42px;border:0;">
+               <p>Our MOM</p>
+             </a>
+          </nav>
+        -->
+<br>
 
-  <!--
-  <nav>
-      <a href="index.html">
-       <img src="home-button.png" alt="index.html" style="width:42px;height:42px;border:0;" title=HOME>
-       <p> HOME</p>
-     </a>
+          <img src="IMAGES/Miko_Puggy.JPG" width="750"  height="333" alt="An adorable French Bulldog and Boston Terrier" class="center">
+        </header>
 
-   </nav>
+        <section>
+          <h2> Why these dogs need a web page?</h2>
+          <article>
+            <h3> ipso header</h3>
+            <p> Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse nec mauris ut felis commodo interdum. Phasellus fringilla sodales quam, quis aliquam lectus vulputate ut. Ut varius lobortis ante, interdum mollis nisl consequat at. Nullam vitae tincidunt ipsum. Nullam tincidunt molestie venenatis. Quisque mattis luctus mattis. Donec faucibus efficitur dolor. Etiam facilisis, erat non ultricies venenatis, elit tellus interdum est, non tempus nunc urna a odio. Mauris sagittis accumsan cursus. Vivamus nibh mauris, congue bibendum tempor ac, facilisis sit amet sem. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos.</p>
 
-    <nav>
-       <a href="semantic-elements1.html">
-        <img src="about-us-two-dogs.jpg"  alt="semantic-elements1.html" style="width:42px;height:42px;border:0;">
-        <p>About Us</p>
-      </a>
-    </nav>
-
-    <nav>
-      <a href="https://www.lipsum.com">
-        <img src="about-mom.jpg"  alt="https://www.lipsum.com" style="width:42px;height:42px;border:0;">
-         <p>Our MOM</p>
-       </a>
-    </nav>
-  -->
-<p></p>
-<p></p>
-    <img src="IMAGES/Miko_Puggy.JPG" width="750"  height="333" alt="An adorable French Bulldog and Boston Terrier">
-  </header>
-
-  <section>
-    <h2> Why these dogs need a web page?</h2>
-    <article>
-      <h3> ipso header</h3>
-      <p> Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse nec mauris ut felis commodo interdum. Phasellus fringilla sodales quam, quis aliquam lectus vulputate ut. Ut varius lobortis ante, interdum mollis nisl consequat at. Nullam vitae tincidunt ipsum. Nullam tincidunt molestie venenatis. Quisque mattis luctus mattis. Donec faucibus efficitur dolor. Etiam facilisis, erat non ultricies venenatis, elit tellus interdum est, non tempus nunc urna a odio. Mauris sagittis accumsan cursus. Vivamus nibh mauris, congue bibendum tempor ac, facilisis sit amet sem. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos.</p>
-
-      <div>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</div>
-      <div> Suspendisse nec mauris ut felis commodo interdum.</div>
-      <div> Phasellus fringilla sodales quam, quis aliquam lectus vulputate ut.</div>
-      <div> Ut varius lobortis ante, interdum mollis nisl consequat at.</div>
+            <div>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</div>
+            <div> Suspendisse nec mauris ut felis commodo interdum.</div>
+            <div> Phasellus fringilla sodales quam, quis aliquam lectus vulputate ut.</div>
+            <div> Ut varius lobortis ante, interdum mollis nisl consequat at.</div>
 
 
-      <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse nec mauris ut felis commodo interdum. Phasellus fringilla sodales quam, quis aliquam lectus vulputate ut. Ut varius lobortis ante, interdum mollis nisl consequat at. Nullam vitae tincidunt ipsum. Nullam tincidunt molestie venenatis. Quisque mattis luctus mattis. Donec faucibus efficitur dolor. Etiam facilisis, erat non ultricies venenatis, elit tellus interdum est, non tempus nunc urna a odio. Mauris sagittis accumsan cursus. Vivamus nibh mauris, congue bibendum tempor ac, facilisis sit amet sem. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos.Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse nec mauris ut felis commodo interdum. Phasellus fringilla sodales quam, quis aliquam lectus vulputate ut. Ut varius lobortis ante, interdum mollis nisl consequat at. Nullam vitae tincidunt ipsum. Nullam tincidunt molestie venenatis. Quisque mattis luctus mattis. Donec faucibus efficitur dolor. Etiam facilisis, erat non ultricies venenatis, elit tellus interdum est, non tempus nunc urna a odio. Mauris sagittis accumsan cursus. Vivamus nibh mauris, congue bibendum tempor ac, facilisis sit amet sem. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos.</p>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse nec mauris ut felis commodo interdum. Phasellus fringilla sodales quam, quis aliquam lectus vulputate ut. Ut varius lobortis ante, interdum mollis nisl consequat at. Nullam vitae tincidunt ipsum. Nullam tincidunt molestie venenatis. Quisque mattis luctus mattis. Donec faucibus efficitur dolor. Etiam facilisis, erat non ultricies venenatis, elit tellus interdum est, non tempus nunc urna a odio. Mauris sagittis accumsan cursus. Vivamus nibh mauris, congue bibendum tempor ac, facilisis sit amet sem. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos.Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse nec mauris ut felis commodo interdum. Phasellus fringilla sodales quam, quis aliquam lectus vulputate ut. Ut varius lobortis ante, interdum mollis nisl consequat at. Nullam vitae tincidunt ipsum. Nullam tincidunt molestie venenatis. Quisque mattis luctus mattis. Donec faucibus efficitur dolor. Etiam facilisis, erat non ultricies venenatis, elit tellus interdum est, non tempus nunc urna a odio. Mauris sagittis accumsan cursus. Vivamus nibh mauris, congue bibendum tempor ac, facilisis sit amet sem. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos.</p>
 
-    </article>
+          </article>
 
-    <aside>
-      <h3> ipso header</h3>
-      <ul>
-        <li>bullet list 1</li>
-        <li>bullet list 2</li>
-        <li>bullet list 3</li>
-      </ul>
-    </aside>
+          <aside>
+            <h3> ipso header</h3>
+            <ul>
+              <li>bullet list 1</li>
+              <li>bullet list 2</li>
+              <li>bullet list 3</li>
+            </ul>
+          </aside>
 
-  </section>
+        </section>
 
-  <footer>
-    <p> This page is made by Erlb88. mom of Miko & Puggy. Jan 19, 2019</p>
-  </footer>
+        <footer>
+          <p> This page is made by Erlb88. mom of Miko & Puggy. Jan 19, 2019</p>
+        </footer>
 
-  </body>
-</html>
+        </body>
+      </html>
