--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@
   <head>
     <meta charset="utf-8">
     <title>Good  Website</title>
+    <link rel="stylesheet" type="text/css" href="STYLES/styles.css"
+
   </head>
   <body style="background-color:powderblue;">
 
