update assignment 02 with styles.css

--- a/Lesson02-Assignment.html
+++ b/Lesson02-Assignment.html
@@ -6,44 +6,34 @@
        <head>
             <meta charset="utf-8">
             <title>Lesson02-Assignment</title>
+            <link rel="stylesheet" type="text/css" href="STYLES/styles.css">
         </head>
-<link rel="stylesheet" type="text/css" href="STYLES/styles.css"
+
         <body>
-      <link rel="stylesheet" type="text/css" href="STYLES/styles.css"
+
         <header>
 
           <h1>MIKO & PUGGY's Adventures</h1>
 
-          <a href="index.html"><img src="IMAGES/home-button.png" alt="index.html" style="width:80px;height:80px;border:0;" title=HOME></a>
-          <a href="semantic-elements1.html"><img src="IMAGES/about-us-two-dogs.jpg" alt="semantic-elements1.html" style="width:80px;height:80px;border:0;" title="About Us"></a>
-          <a href="https://www.lipsum.com"><img src="IMAGES/about-mom.jpg" alt="https://www.lipsum.com" style="width:80px;height:80px;border:0;" title="Our MOM"></a>
-          <a href="https://www.lipsum.com"><img src="IMAGES/feedback-icon.jpg" alt="https://www.lipsum.com" style="width:80px;height:80px;border:0;" title="Email us"></a>
-        <br>
+          <a href="index.html">
+            <img src="IMAGES/home-button.png" alt="index.html" style="width:80px;height:80px;border:0;" title=HOME>
+          </a>
+          <a href="semantic-elements1.html">
+            <img src="IMAGES/about-us-two-dogs.jpg" alt="semantic-elements1.html" style="width:80px;height:80px;border:0;" title="About Us">
+          </a>
+          <a href="https://www.lipsum.com">
+            <img src="IMAGES/about-mom.jpg" alt="https://www.lipsum.com" style="width:80px;height:80px;border:0;" title="Our MOM">
+          </a>
+          <a href="https://www.lipsum.com">
+            <img src="IMAGES/feedback-icon.jpg" alt="https://www.lipsum.com" style="width:80px;height:80px;border:0;" title="Email us">
+          </a>
+          <br>
+          <p></p>
+          <p></p>
 
-        <!--
-        <nav>
-            <a href="index.html">
-             <img src="home-button.png" alt="index.html" style="width:42px;height:42px;border:0;" title=HOME>
-             <p> HOME</p>
-           </a>
-         </nav>
-          <nav>
-             <a href="semantic-elements1.html">
-              <img src="about-us-two-dogs.jpg"  alt="semantic-elements1.html" style="width:42px;height:42px;border:0;">
-              <p>About Us</p>
-            </a>
-          </nav>
-          <nav>
-            <a href="https://www.lipsum.com">
-              <img src="about-mom.jpg"  alt="https://www.lipsum.com" style="width:42px;height:42px;border:0;">
-               <p>Our MOM</p>
-             </a>
-          </nav>
-        -->
-<br>
 
-          <img src="IMAGES/Miko_Puggy.JPG" width="750"  height="333" alt="An adorable French Bulldog and Boston Terrier" class="center">
-        </header>
+          <img src="IMAGES/Miko_Puggy.JPG" width="950"  height="333" alt="An adorable French Bulldog and Boston Terrier" class="center">
+
 
         <section>
           <h2> Why these dogs need a web page?</h2>
