--- a/Lesson02-Assignment.html
+++ b/Lesson02-Assignment.html
@@ -13,7 +13,7 @@
 
         <header>
 
-          <h1>MIKO & PUGGY's Adventures</h1>
+          <h1 align="center">MIKO & PUGGY's Adventures </h1>
 
           <a href="index.html">
             <img src="IMAGES/home-button.png" alt="index.html" style="width:80px;height:80px;border:0;" title=HOME>
