--- a/index.html
+++ b/index.html
@@ -5,15 +5,23 @@
     <title>Good  Website</title>
     <link rel="stylesheet" type="text/css" href="STYLES/styles.css"
 
-  
-
-
-
   </head>
   <body style="background-color:powderblue;">
 
-    <h1 style="color:green;">WELCOME! </h1>
+    <h1 style="color:green;">WELCOME ASSIGNMENT no. 1! </h1>
 
+    <a href="index.html">
+      <img src="IMAGES/home-button.png" alt="index.html" style="width:80px;height:80px;border:0;" title=HOME>
+    </a>
+    <a href="semantic-elements1.html">
+      <img src="IMAGES/about-us-two-dogs.jpg" alt="semantic-elements1.html" style="width:80px;height:80px;border:0;" title="About Us">
+    </a>
+    <a href="https://www.lipsum.com">
+      <img src="IMAGES/about-mom.jpg" alt="https://www.lipsum.com" style="width:80px;height:80px;border:0;" title="Our MOM">
+    </a>
+    <a href="https://www.lipsum.com">
+      <img src="IMAGES/feedback-icon.jpg" alt="https://www.lipsum.com" style="width:80px;height:80px;border:0;" title="Email us">
+    </a>
 
 
 
