--- a/Lesson02-Assignment.html
+++ b/Lesson02-Assignment.html
@@ -13,10 +13,16 @@
 
         <header>
 
-          <h1 align="center">MIKO & PUGGY's Adventures </h1>
+          <h1 align="center">MIKO & PUGGY's HOME PAGE </h1>
+
+          <a href="Lesson02-Assignment.html">
+            <img src="IMAGES/home-button.png" alt="Lesson02-Assignment.html" style="width:80px;height:80px;border:0;" title=HOME>
 
           <a href="index.html">
-            <img src="IMAGES/home-button.png" alt="index.html" style="width:80px;height:80px;border:0;" title=HOME>
+              <img src="IMAGES/Homework.jpg" alt="index.html" style="width:80px;height:80px;border:0;" title=Homework>
+
+
+
           </a>
           <a href="semantic-elements1.html">
             <img src="IMAGES/about-us-two-dogs.jpg" alt="semantic-elements1.html" style="width:80px;height:80px;border:0;" title="About Us">
