--- a/index.html
+++ b/index.html
@@ -10,8 +10,14 @@
 
     <h1 style="color:green;">WELCOME ASSIGNMENT no. 1! </h1>
 
+    <a href="Lesson02-Assignment.html">
+      <img src="IMAGES/home-button.png" alt="Lesson02-Assignment.html" style="width:80px;height:80px;border:0;" title=HOME>
+
     <a href="index.html">
-      <img src="IMAGES/home-button.png" alt="index.html" style="width:80px;height:80px;border:0;" title=HOME>
+        <img src="IMAGES/Homework.jpg" alt="index.html" style="width:80px;height:80px;border:0;" title=Homework>
+
+
+
     </a>
     <a href="semantic-elements1.html">
       <img src="IMAGES/about-us-two-dogs.jpg" alt="semantic-elements1.html" style="width:80px;height:80px;border:0;" title="About Us">
@@ -22,6 +28,10 @@
     <a href="https://www.lipsum.com">
       <img src="IMAGES/feedback-icon.jpg" alt="https://www.lipsum.com" style="width:80px;height:80px;border:0;" title="Email us">
     </a>
+
+
+
+
 
 
 
