--- a/semantic-elements1.html
+++ b/semantic-elements1.html
@@ -10,7 +10,30 @@
   <body>
 
     <h1>  About US</h1>
-    <img src="IMAGES/about-us-two-dogs.jpg" alt="semantic-elements1.html" style="width:80px;height:80px;border:0;" title="About Us">
+    <a href="Lesson02-Assignment.html">
+      <img src="IMAGES/home-button.png" alt="Lesson02-Assignment.html" style="width:80px;height:80px;border:0;" title=HOME>
+
+    <a href="index.html">
+        <img src="IMAGES/Homework.jpg" alt="index.html" style="width:80px;height:80px;border:0;" title=Homework>
+
+
+
+    </a>
+    <a href="semantic-elements1.html">
+      <img src="IMAGES/about-us-two-dogs.jpg" alt="semantic-elements1.html" style="width:80px;height:80px;border:0;" title="About Us">
+    </a>
+    <a href="https://www.lipsum.com">
+      <img src="IMAGES/about-mom.jpg" alt="https://www.lipsum.com" style="width:80px;height:80px;border:0;" title="Our MOM">
+    </a>
+    <a href="https://www.lipsum.com">
+      <img src="IMAGES/feedback-icon.jpg" alt="https://www.lipsum.com" style="width:80px;height:80px;border:0;" title="Email us">
+    </a>
+
+
+
+
+
+
 
 
     <h2> <em>Miko & Puggy</em></h2>
