--- a/Lesson02-Assignment.html
+++ b/Lesson02-Assignment.html
@@ -13,16 +13,13 @@
 
         <header>
 
-          <h1 align="center">MIKO & PUGGY's HOME PAGE </h1>
+          <h1>MIKO & PUGGY's HOME PAGE </h1>
 
           <a href="Lesson02-Assignment.html">
             <img src="IMAGES/home-button.png" alt="Lesson02-Assignment.html" style="width:80px;height:80px;border:0;" title=HOME>
-
+          </a>
           <a href="index.html">
               <img src="IMAGES/Homework.jpg" alt="index.html" style="width:80px;height:80px;border:0;" title=Homework>
-
-
-
           </a>
           <a href="semantic-elements1.html">
             <img src="IMAGES/about-us-two-dogs.jpg" alt="semantic-elements1.html" style="width:80px;height:80px;border:0;" title="About Us">
@@ -39,6 +36,7 @@
 
 
           <img src="IMAGES/Miko_Puggy.JPG" width="950"  height="333" alt="An adorable French Bulldog and Boston Terrier" class="center">
+    </header>
 
 
         <section>
