--- a/Lesson02-Assignment.html
+++ b/Lesson02-Assignment.html
@@ -24,8 +24,8 @@
           <a href="semantic-elements1.html">
             <img src="IMAGES/about-us-two-dogs.jpg" alt="semantic-elements1.html" style="width:80px;height:80px;border:0;" title="About Us">
           </a>
-          <a href="https://www.lipsum.com">
-            <img src="IMAGES/about-mom.jpg" alt="https://www.lipsum.com" style="width:80px;height:80px;border:0;" title="Our MOM">
+          <a href="under-construction.html">
+            <img src="IMAGES/about-mom.jpg" alt="under-construction.html" style="width:80px;height:80px;border:0;" title="Our MOM">
           </a>
           <a href="https://www.lipsum.com">
             <img src="IMAGES/feedback-icon.jpg" alt="https://www.lipsum.com" style="width:80px;height:80px;border:0;" title="Email us">
