--- a/Lesson02-Assignment.html
+++ b/Lesson02-Assignment.html
@@ -12,9 +12,11 @@
         <body>
 
         <header>
-
+          <div class="a">
           <h1>MIKO & PUGGY's HOME PAGE </h1>
 
+
+          <div class="b">
           <a href="Lesson02-Assignment.html">
             <img src="IMAGES/home-button.png" alt="Lesson02-Assignment.html" style="width:80px;height:80px;border:0;" title=HOME>
           </a>
