update feedback link

--- a/feedback.html
+++ b/feedback.html
@@ -1,39 +1,20 @@
-<!DOCTYPE html>
-<html>
-<head>
-<style>
-input {
-  width: 100%;
-}
-</style>
-</head>
-<body>
-  <a href="Lesson02-Assignment.html">
-    <img src="IMAGES/home-button.png" alt="Lesson02-Assignment.html" style="width:80px;height:80px;border:0;" title=HOME>
-  </a>
-  <a href="index.html">
-      <img src="IMAGES/Homework.jpg" alt="index.html" style="width:80px;height:80px;border:0;" title=Homework>
-  </a>
-  <a href="semantic-elements1.html">
-    <img src="IMAGES/about-us-two-dogs.jpg" alt="semantic-elements1.html" style="width:80px;height:80px;border:0;" title="About Us">
-  </a>
-  <a href="under-construction.html">
-    <img src="IMAGES/about-mom.jpg" alt="under-construction.html" style="width:80px;height:80px;border:0;" title="Our MOM">
-  </a>
-  <a href="https://feedback.html">
-    <img src="IMAGES/feedback-icon.jpg" alt="https://feedback.html" style="width:80px;height:80px;border:0;" title="Email us">
-  </a>
+
+      <!DOCTYPE html>
+      <html lang="en">
+
+       <head>
+            <meta charset="utf-8">
+            <title>LFeed back</title>
+
+        </head>
+
+        <body>
+
+            <header>
+
+          <h1>FEEDBACK PAGE </h1>
+          <p> Under construction..</p>
 
 
-
-
-
-<p>Feed back form:</p>
-
-<form>
-  <label for="fname">First Name</label>
-  <input type="text" id="fname" name="fname">
-</form>
-
-</body>
-</html>
+     </body>
+     </html>
