--- a/under-construction.html
+++ b/under-construction.html
@@ -12,7 +12,7 @@
   <header>
 
     <h1>Our MOM</h1>
-
+  </header>
     <a href="Lesson02-Assignment.html">
       <img src="IMAGES/home-button.png" alt="Lesson02-Assignment.html" style="width:80px;height:80px;border:0;" title=HOME>
     </a>
