updated and rename file

--- a/Lesson04-assignment.html
+++ b/Lesson04-assignment.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8">
-    <title>Lesson Four: Box Model Activity</title>
+    <title>Lesson04-Assignment-MOCKUP/title>
     <style>
       /*Add CSS style here using the cats class*/
      </style>
