--- a/Lesson04-assignment.html
+++ b/Lesson04-assignment.html
@@ -5,22 +5,45 @@
     <title>Lesson04-Assignment-MOCKUP/title>
     <style>
       /*Add CSS style here using the cats class*/
+
+
+      *{box-sizing:border-box;}
+       .cats {
+          height: 8rem;
+          background-color: pink;
+          padding: 1rem;
+       /* border-width:3px;
+          border-style:solid; */
+
+          border: 3px dashed green;
+
+          /* margin-bottom:1rem
+          margin-top:1.5rem; */
+          margin: 1.5rem 0 1rem;
+
+
+
+
+
+
+
      </style>
   </head>
+
+
   <body>
     <article>
+       <header>
+          <h1>Cats Heart Boxes</h1>
+       </header>
 
-      <header>
-        <h1>Cats Heart Boxes</h1>
-      </header>
-
-      <section>
-        <h2>If They Fits, They Sits</h2>
-        <article class="cats">
+       <section>
+          <h2>If They Fits, They Sits</h2>
+          <article class="cats">
           <a href="https://www.youtube.com/watch?reload=9&v=J11uu8L8FTY">Video evidence!</a>
           <p>Big cats like refrigerator boxes.</p>
           <p>House cats like shoe boxes.</p>
-        </article>
+          </article>
       </section>
 
       <footer>
