update file with header box and nav button

--- a/Lesson04-assignment.html
+++ b/Lesson04-assignment.html
@@ -2,52 +2,58 @@
 <html lang="en">
   <head>
     <meta charset="utf-8">
-    <title>Lesson04-Assignment-MOCKUP/title>
+    <title>Lesson04-Assignment-MOCKUP</title>
+
+    <header>
+            <h1>KITTIES TO GO!</h1>
+            <h3>Seattle's premier drive-thru cat rentals</h3>
+    </header>
+          <nav>
+            <a href="#" target="_blank">About   /</a>
+            <a href="#" target="_blank">Rates   /</a>
+            <a href="#" target="_blank">Liabiliity Release   /</a>
+            <a href="#" target="_blank">Kitties Profiles   /</a>
+            <a href="#" target="_blank">Book a Cat   /</a>
+          </nav>
+
+
     <style>
-      /*Add CSS style here using the cats class*/
+      /*This is my styling sheet  portion*/
 
 
       *{box-sizing:border-box;}
-       .cats {
-          height: 8rem;
-          background-color: pink;
-          padding: 1rem;
-       /* border-width:3px;
-          border-style:solid; */
 
-          border: 3px dashed green;
-
-          /* margin-bottom:1rem
-          margin-top:1.5rem; */
-          margin: 1.5rem 0 1rem;
-
-
-
-
+      header {
+      	height:10em;
+      	background-color:pink;
+      	color:white;
+      	/*margin-left:13%;*/
+      	padding:5% 13%;
+      }
 
 
 
      </style>
+
   </head>
 
 
   <body>
     <article>
-       <header>
-          <h1>Cats Heart Boxes</h1>
-       </header>
+
 
        <section>
-          <h2>If They Fits, They Sits</h2>
-          <article class="cats">
-          <a href="https://www.youtube.com/watch?reload=9&v=J11uu8L8FTY">Video evidence!</a>
-          <p>Big cats like refrigerator boxes.</p>
-          <p>House cats like shoe boxes.</p>
-          </article>
+          <h3>It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout. </h3>
+              <p>he point of using Lorem Ipsum is that it has a more-or-less normal distribution of letters, as opposed to using 'Content here, content here', making it look like readable English. Many desktop publishing packages and web page editors.</p>
+
+          <h3>It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout. </h3>
+             <p>he point of using Lorem Ipsum is that it has a more-or-less normal distribution of letters, as opposed to using 'Content here, content here', making it look like readable English. Many desktop publishing packages and web page editors.</p>
+     </article>
       </section>
 
-      <footer>
+      <footer> 
       </footer>
 
     </article>
   </body>
+</html>
