upate background color of navigationbutton

--- a/Lesson04-assignment.html
+++ b/Lesson04-assignment.html
@@ -31,6 +31,22 @@
       	padding:5% 13%;
       }
 
+      header h3 {
+      	font-style:italic;
+      }
+
+      nav {
+      	background-color: lightgray;
+      	color: darkgray;
+      	padding:1em 13%;
+      }
+
+
+      footer {
+      	clear:both;
+      }
+
+
 
 
      </style>
@@ -51,7 +67,8 @@
      </article>
       </section>
 
-      <footer> 
+      <footer>
+        <p>assignment no4</p>
       </footer>
 
     </article>
