Added a side bar to the file

--- a/Lesson04-assignment.html
+++ b/Lesson04-assignment.html
@@ -42,12 +42,18 @@
       }
 
 
-      footer {
-      	clear:both;
+
+
+      sidebar {
+      	width:20%;
+      	float:right;
+      	display:inline-block;
+      	margin-right:5%;
       }
 
-
-
+      footer {
+        clear:both;
+      }
 
      </style>
 
@@ -67,8 +73,32 @@
      </article>
       </section>
 
+      <sidebar>
+            <article>
+              <h4>CATS IN THE NEWS</h4>
+              <p>
+                Cat buddies have no litter i live in luxury cat life.
+              </p>
+               <a a href="#" target="_blank">Find out more >></a>
+
+           <p>   rro quisquam est qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit..." <break>
+"There is no one who loves pain itself, who seeks afte.</p>
+
+
+              <a a href="#" target="_blank">Find out more >></a>
+    </sidebar>
+
+
+
+
+
+
+
+
+
+
       <footer>
-        <p>assignment no4</p>
+        <p>|assignment no4| erlbuenbrazo</p>
       </footer>
 
     </article>
