update the side bar

--- a/Lesson04-assignment.html
+++ b/Lesson04-assignment.html
@@ -86,6 +86,19 @@
 
 
               <a a href="#" target="_blank">Find out more >></a>
+
+              <h4>CAT OF THE WEEK</h4>
+              <img src="images/lesson04-mock3-sidebar-cat.jpg" alt="Cute Gray kitten" />
+              <p>
+                rro quisquam est qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit..." <break>
+     "There is no one who loves pain itself, who seeks afte
+              </p>
+              <a a href="#" target="_blank">Book Now >></a>
+              </article>
+
+
+
+
     </sidebar>
 
 
