--- a/Lesson04-assignment.html
+++ b/Lesson04-assignment.html
@@ -42,6 +42,44 @@
       }
 
 
+      section {
+      	width:51%;
+      	margin-right:1%;
+      	padding-left: 13%;
+      	float:left;
+      }
+      	section:first-of-type h4 {
+      	  color:blue;
+      	}
+      	section:first-of-type p {
+      	}
+      	section:first-of-type p a {
+      	}
+      	section h5 {
+      		color:blue;
+      		font-size:1em;
+      	}
+      	section:last-of-type h4 {
+      		color:blue;
+      	}
+      	section:last-of-type p {
+      	}
+      	section:last-of-type p a {
+      	}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 
       sidebar {
@@ -61,17 +99,51 @@
 
 
   <body>
-    <article>
+
 
 
        <section>
-          <h3>It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout. </h3>
-              <p>he point of using Lorem Ipsum is that it has a more-or-less normal distribution of letters, as opposed to using 'Content here, content here', making it look like readable English. Many desktop publishing packages and web page editors.</p>
+        <article>
+          <h4>It is a long established fact that a reader will be distracted
+            tof a page when looking at its layout. </h4>
 
-          <h3>It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout. </h3>
-             <p>he point of using Lorem Ipsum is that it has a more-or-less normal distribution of letters, as opposed to using 'Content here, content here', making it look like readable English. Many desktop publishing packages and web page editors.</p>
-     </article>
+
+              <p>
+                he point of using Lorem Ipsum is that it has a more-or-less normal distribution
+                 of letters, as opposed to using 'Content here, content here', making it look like
+                  readable English. Many desktop publishing packages and web page editors.
+              </p>
+
+        </article>
+
+           <h5><br>
+           &mdash; erlbuenbrazo
+            </h5>
+
+
+        <article>
+                      <h3>KITTIES TO GO</h3>
+                        <p>
+                        It is a long established fact that a reader will be distracted by
+                           the readable content of a page when looking at its layout.
+                          he point of using Lorem Ipsum is that it has a more-or-less normal
+                          It is a long established fact that a reader will be distracted by
+                             the readable content of a page when looking at its layout.
+                            he point of using Lorem Ipsum is that it has a more-or-less normal
+                        </p>
+
+                        <p>
+                        </p>
+
+                       <p>It is a long established fact that a reader will be distracted by
+                         the readable content of a page when looking at its layout.
+                        he point of using Lorem Ipsum is that it has a more-or-less normal
+                       </p>
+
+          </article>
+
       </section>
+
 
       <sidebar>
             <article>
@@ -96,9 +168,6 @@
               <a a href="#" target="_blank">Book Now >></a>
               </article>
 
-
-
-
     </sidebar>
 
 
@@ -114,6 +183,6 @@
         <p>|assignment no4| erlbuenbrazo</p>
       </footer>
 
-    </article>
+
   </body>
 </html>
