update footer logo

--- a/Lesson04-assignment.html
+++ b/Lesson04-assignment.html
@@ -69,19 +69,6 @@
 
 
 
-
-
-
-
-
-
-
-
-
-
-
-
-
       sidebar {
       	width:20%;
       	float:right;
@@ -117,6 +104,9 @@
         </article>
 
            <h5><br>
+              <p>he point of using Lorem Ipsum is that it has a more-or-less normal distribution
+               of letters,
+             </p>
            &mdash; erlbuenbrazo
             </h5>
 
@@ -180,6 +170,7 @@
 
 
       <footer>
+        <img src="images/lesson04-mock4-footer-image.jpg" alt="footer image" />
         <p>|assignment no4| erlbuenbrazo</p>
       </footer>
 
