--- a/Lesson04-assignment.html
+++ b/Lesson04-assignment.html
@@ -28,7 +28,7 @@
       	background-color:pink;
       	color:white;
       	/*margin-left:13%;*/
-      	padding:5% 13%;
+      	padding:3% 13%;
       }
 
       header h3 {
@@ -105,9 +105,10 @@
 
            <h5><br>
               <p>he point of using Lorem Ipsum is that it has a more-or-less normal distribution
-               of letters,
-             </p>
+               of letters,<br>
+
            &mdash; erlbuenbrazo
+         </p>
             </h5>
 
 
@@ -120,6 +121,7 @@
                           It is a long established fact that a reader will be distracted by
                              the readable content of a page when looking at its layout.
                             he point of using Lorem Ipsum is that it has a more-or-less normal
+                            he point of using Lorem Ipsum is that it has a more-or-less normal
                         </p>
 
                         <p>
@@ -127,6 +129,7 @@
 
                        <p>It is a long established fact that a reader will be distracted by
                          the readable content of a page when looking at its layout.
+                        he point of using Lorem Ipsum is that it has a more-or-less normal
                         he point of using Lorem Ipsum is that it has a more-or-less normal
                        </p>
 
@@ -159,13 +162,6 @@
               </article>
 
     </sidebar>
-
-
-
-
-
-
-
 
 
 
