modified several html files

--- a/Lesson04-assignment.html
+++ b/Lesson04-assignment.html
@@ -24,8 +24,8 @@
       *{box-sizing:border-box;}
 
       header {
-      	height:10em;
-      	background-color:pink;
+      	height:10%;
+      	background-color:purple;
       	color:white;
       	/*margin-left:13%;*/
       	padding:3% 13%;
@@ -166,7 +166,7 @@
 
 
       <footer>
-        <img src="images/lesson04-mock4-footer-image.jpg" alt="footer image" />
+        <img src="IMAGES/footer-logo.png" alt="footer image" />
         <p>|assignment no4| erlbuenbrazo</p>
       </footer>
 
