--- a/semantic-elements1.html
+++ b/semantic-elements1.html
@@ -10,11 +10,11 @@
   <body>
 
     <h1>  About US</h1>
-    <a href="Lesson02-Assignment.html">
-      <img src="IMAGES/home-button.png" alt="Lesson02-Assignment.html" style="width:80px;height:80px;border:0;" title=HOME>
-
     <a href="index.html">
-        <img src="IMAGES/Homework.jpg" alt="index.html" style="width:80px;height:80px;border:0;" title=Homework>
+      <img src="IMAGES/home-button.png" alt="index.html" style="width:80px;height:80px;border:0;" title=HOME>
+
+    <a href="Lesson02-Assignment.html">
+        <img src="IMAGES/Homework.jpg" alt="Lesson02-Assignment.html" style="width:80px;height:80px;border:0;" title=Homework>
 
 
 
@@ -23,7 +23,7 @@
       <img src="IMAGES/about-us-two-dogs.jpg" alt="semantic-elements1.html" style="width:80px;height:80px;border:0;" title="About Us">
     </a>
     <a href="under-construction.html">
-      <img src="IMAGES/about-mom.jpg" alt="under-construction.html" style="width:80px;height:80px;border:0;" title="Our MOM">
+      <img src="IMAGES/about-mom.JPG" alt="under-construction.html" style="width:80px;height:80px;border:0;" title="Our MOM">
     </a>
     <a href="https://www.lipsum.com">
       <img src="IMAGES/feedback-icon.jpg" alt="https://www.lipsum.com" style="width:80px;height:80px;border:0;" title="Email us">
