--- a/Lesson02-Assignment.html
+++ b/Lesson02-Assignment.html
@@ -13,29 +13,35 @@
 
         <header>
           <div class="a">
-          <h1>MIKO & PUGGY's HOME PAGE </h1>
+          <h1>Miko and Puggy's PAGE </h1>
         </div>
 
 
           <div class="b">
-          <a href="Lesson02-Assignment.html">
-            <img src="IMAGES/home-button.png" alt="Lesson02-Assignment.html" style="width:80px;height:80px;border:0;" title=HOME>
+            <a href="index.html">
+               <img src="IMAGES/home-button.png" alt="index.html" style="width:80px;height:80px;border:0;" title=HOME>
+            </a>
 
-          </a>
-         </div>
 
-          <a href="index.html">
-              <img src="IMAGES/Homework.jpg" alt="index.html" style="width:80px;height:80px;border:0;" title=Homework>
-          </a>
-          <a href="semantic-elements1.html">
-            <img src="IMAGES/about-us-two-dogs.jpg" alt="semantic-elements1.html" style="width:80px;height:80px;border:0;" title="About Us">
-          </a>
-          <a href="under-construction.html">
-            <img src="IMAGES/about-mom.JPG" alt="under-construction.html" style="width:80px;height:80px;border:0;" title="Our MOM">
-          </a>
-          <a href="https://www.lipsum.com">
-            <img src="IMAGES/feedback-icon.jpg" alt="https://www.lipsum.com" style="width:80px;height:80px;border:0;" title="Email us">
-          </a>
+            <a href="Lesson02-Assignment.html">
+              <img src="IMAGES/Homework.jpg" alt="Lesson02-Assignment.html" style="width:80px;height:80px;border:0;" title=Homework>
+            </a>
+
+            <a href="semantic-elements1.html">
+               <img src="IMAGES/about-us-two-dogs.jpg" alt="semantic-elements1.html" style="width:80px;height:80px;border:0;" title="About Us">
+            </a>
+
+
+            <a href="under-construction.html">
+               <img src="IMAGES/about-mom.JPG" alt="under-construction.html" style="width:80px;height:80px;border:0;" title="Our MOM">
+            </a>
+
+
+            <a href="https://www.lipsum.com">
+              <img src="IMAGES/feedback-icon.jpg" alt="https://www.lipsum.com" style="width:80px;height:80px;border:0;" title="Email us">
+            </a>
+   </div>
+
           <br>
           <p></p>
           <p></p>
