--- a/index.html
+++ b/index.html
@@ -10,11 +10,11 @@
 
     <h1 style="color:green;">WELCOME ASSIGNMENT no. 1! </h1>
 
-    <a href="Lesson02-Assignment.html">
-      <img src="IMAGES/home-button.png" alt="Lesson02-Assignment.html" style="width:80px;height:80px;border:0;" title=HOME>
-
     <a href="index.html">
-        <img src="IMAGES/Homework.jpg" alt="index.html" style="width:80px;height:80px;border:0;" title=Homework>
+      <img src="IMAGES/home-button.png" alt="index.html" style="width:80px;height:80px;border:0;" title=HOME>
+
+    <a href="Lesson02-Assignment.html">
+        <img src="IMAGES/Homework.jpg" alt="Lesson02-Assignment.html" style="width:80px;height:80px;border:0;" title=Homework>
 
 
 
