--- a/feedback.html
+++ b/feedback.html
@@ -1,20 +1,33 @@
+<!DOCTYPE html>
+<html lang="en">
 
-      <!DOCTYPE html>
-      <html lang="en">
+ <head>
+      <meta charset="utf-8">
+      <title>WEB UNDER CONSTRUCTION</title>
+      <link rel="stylesheet" type="text/css" href="STYLES/styles.css">
+  </head>
 
-       <head>
-            <meta charset="utf-8">
-            <title>LFeed back</title>
+  <body>
 
-        </head>
+  <header>
 
-        <body>
+    <h1>Our MOM</h1>
+  </header>
+    <a href="index.html">
+      <img src="IMAGES/home-button.png" alt="index.html" style="width:80px;height:80px;border:0;" title=HOME>
+    </a>
+    <a href="Lesson02-Assignment.html">
+        <img src="IMAGES/Homework.jpg" alt="Lesson02-Assignment.html" style="width:80px;height:80px;border:0;" title=Homework>
+    </a>
+    <a href="semantic-elements1.html">
+      <img src="IMAGES/about-us-two-dogs.jpg" alt="semantic-elements1.html" style="width:80px;height:80px;border:0;" title="About Us">
+    </a>
+    <a href="https://www.lipsum.com">
+      <img src="IMAGES/about-mom.JPG" alt="https://www.lipsum.com" style="width:80px;height:80px;border:0;" title="Our MOM">
+    </a>
+    <a href="https://www.lipsum.com">
+      <img src="IMAGES/feedback-icon.jpg" alt="https://www.lipsum.com" style="width:80px;height:80px;border:0;" title="Email us">
+    </a>
 
-            <header>
-
-          <h1>FEEDBACK PAGE </h1>
-          <p> Under construction..</p>
-
-
-     </body>
-     </html>
+<br>
+  <p> This page is under construction...</p>
