--- a/our-mom.html
+++ b/our-mom.html
@@ -13,11 +13,11 @@
 
     <h1>Our MOM</h1>
   </header>
-    <a href="Lesson02-Assignment.html">
-      <img src="IMAGES/home-button.png" alt="Lesson02-Assignment.html" style="width:80px;height:80px;border:0;" title=HOME>
-    </a>
     <a href="index.html">
-        <img src="IMAGES/Homework.jpg" alt="index.html" style="width:80px;height:80px;border:0;" title=Homework>
+      <img src="IMAGES/home-button.png" alt="index.html" style="width:80px;height:80px;border:0;" title=HOME>
+    </a>
+    <a href="Lesson02-Assignment.html">
+        <img src="IMAGES/Homework.jpg" alt="Lesson02-Assignment.html" style="width:80px;height:80px;border:0;" title=Homework>
     </a>
     <a href="semantic-elements1.html">
       <img src="IMAGES/about-us-two-dogs.jpg" alt="semantic-elements1.html" style="width:80px;height:80px;border:0;" title="About Us">
