--- a/Lesson02-Assignment.html
+++ b/Lesson02-Assignment.html
@@ -32,13 +32,13 @@
             </a>
 
 
-            <a href="under-construction.html">
-               <img src="IMAGES/about-mom.JPG" alt="under-construction.html" style="width:80px;height:80px;border:0;" title="Our MOM">
+            <a href="our-mom.html">
+               <img src="IMAGES/about-mom.JPG" alt="our-mom.html" style="width:80px;height:80px;border:0;" title="Our MOM">
             </a>
 
 
-            <a href="https://www.lipsum.com">
-              <img src="IMAGES/feedback-icon.jpg" alt="https://www.lipsum.com" style="width:80px;height:80px;border:0;" title="Email us">
+            <a href="feedback.html">
+              <img src="IMAGES/feedback-icon.jpg" alt="feedback.html" style="width:80px;height:80px;border:0;" title="Email us">
             </a>
    </div>
 
