--- a/index.html
+++ b/index.html
@@ -22,11 +22,11 @@
     <a href="semantic-elements1.html">
       <img src="IMAGES/about-us-two-dogs.jpg" alt="semantic-elements1.html" style="width:80px;height:80px;border:0;" title="About Us">
     </a>
-    <a href="https://www.lipsum.com">
-      <img src="IMAGES/about-mom.JPG" alt="https://www.lipsum.com" style="width:80px;height:80px;border:0;" title="Our MOM">
+    <a href="our-mom.html">
+      <img src="IMAGES/about-mom.JPG" alt="our-mom.html" style="width:80px;height:80px;border:0;" title="Our MOM">
     </a>
-    <a href="https://www.lipsum.com">
-      <img src="IMAGES/feedback-icon.jpg" alt="https://www.lipsum.com" style="width:80px;height:80px;border:0;" title="Email us">
+    <a href="feedback.html">
+      <img src="IMAGES/feedback-icon.jpg" alt="feedback.html" style="width:80px;height:80px;border:0;" title="Email us">
     </a>
 
 
