ran validation on all html files

--- a/Lesson02-Assignment.html
+++ b/Lesson02-Assignment.html
@@ -22,13 +22,12 @@
                <img src="IMAGES/home-button.png" alt="index.html" style="width:80px;height:80px;border:0;" title=HOME>
             </a>
 
-
-            <a href="Lesson02-Assignment.html">
-              <img src="IMAGES/Homework.jpg" alt="Lesson02-Assignment.html" style="width:80px;height:80px;border:0;" title=Homework>
+            <a href="semantic-elements1.html">
+              <img src="IMAGES/Homework.jpg" alt="semantic-elements1.html" style="width:80px;height:80px;border:0;" title=Homework>
             </a>
 
-            <a href="semantic-elements1.html">
-               <img src="IMAGES/about-us-two-dogs.jpg" alt="semantic-elements1.html" style="width:80px;height:80px;border:0;" title="About Us">
+            <a href="Lesson02-Assignment.html">
+               <img src="IMAGES/about-us-two-dogs.jpg" alt="Lesson02-Assignment.html" style="width:80px;height:80px;border:0;" title="About Us">
             </a>
 
 
