--- a/semantic-elements1.html
+++ b/semantic-elements1.html
@@ -4,41 +4,37 @@
   <head>
       <meta charset="utf-8">
       <title> My Semantic Webpage</title>
-      <link rel="stylesheet" type="text/css" href="STYLES/styles.css"
+      <link rel="stylesheet" type="text/css" href="STYLES/styles.css">
   </head>
 
   <body>
 
     <h1>  About US</h1>
+
     <a href="index.html">
       <img src="IMAGES/home-button.png" alt="index.html" style="width:80px;height:80px;border:0;" title=HOME>
+    </a>
+
+    <a href="semantic-elements1.html">
+        <img src="IMAGES/Homework.jpg" alt="semantic-elements1.html" style="width:80px;height:80px;border:0;" title=Homework>
+    </a>
 
     <a href="Lesson02-Assignment.html">
-        <img src="IMAGES/Homework.jpg" alt="Lesson02-Assignment.html" style="width:80px;height:80px;border:0;" title=Homework>
-
-
-
+      <img src="IMAGES/about-us-two-dogs.jpg" alt="Lesson02-Assignment.html" style="width:80px;height:80px;border:0;" title="About Us">
     </a>
-    <a href="semantic-elements1.html">
-      <img src="IMAGES/about-us-two-dogs.jpg" alt="semantic-elements1.html" style="width:80px;height:80px;border:0;" title="About Us">
-    </a>
+
     <a href="our-mom.html">
       <img src="IMAGES/about-mom.JPG" alt="our-mom.html" style="width:80px;height:80px;border:0;" title="Our MOM">
     </a>
+
     <a href="feedback.html">
       <img src="IMAGES/feedback-icon.jpg" alt="feedback.html" style="width:80px;height:80px;border:0;" title="Email us">
     </a>
 
 
-
-
-
-
-
-
     <h2> <em>Miko & Puggy</em></h2>
 
-    <p> I am <em>Miko</em> and I am a 1 year olf French Bulldog.</em><br> I am the youngere <u>"sister' of PUGGY".</u> <strong>I eat, sleep, and PLAY a lot!</strong></p>
+    <p> I am <em>Miko and I am a 1 year olf French Bulldog.</em><br> I am the youngere <u>"sister' of PUGGY".</u> <strong>I eat, sleep, and PLAY a lot!</strong></p>
     <p></p>
     <p> Puggy is a Boston Terrier. My mom found Puggy wandering around the neighborhood. Puggy was surrendered to the local animal control in case somebody might be looking for her but nobody claimed her. Eventually, big sister Puggy was adopted by my mom."</p>
 
