--- a/feedback.html
+++ b/feedback.html
@@ -13,18 +13,23 @@
 
     <h1>Feedback</h1>
   </header>
+
     <a href="index.html">
       <img src="IMAGES/home-button.png" alt="index.html" style="width:80px;height:80px;border:0;" title=HOME>
     </a>
-    <a href="Lesson02-Assignment.html">
-        <img src="IMAGES/Homework.jpg" alt="Lesson02-Assignment.html" style="width:80px;height:80px;border:0;" title=Homework>
-    </a>
+
     <a href="semantic-elements1.html">
-      <img src="IMAGES/about-us-two-dogs.jpg" alt="semantic-elements1.html" style="width:80px;height:80px;border:0;" title="About Us">
+        <img src="IMAGES/Homework.jpg" alt="semantic-elements1.html" style="width:80px;height:80px;border:0;" title=Homework>
     </a>
+
+    <a href="Lesson02-Assignment.html">
+      <img src="IMAGES/about-us-two-dogs.jpg" alt="Lesson02-Assignment.html" style="width:80px;height:80px;border:0;" title="About Us">
+    </a>
+
     <a href="our-mom.html">
       <img src="IMAGES/about-mom.JPG" alt="our-mom.html" style="width:80px;height:80px;border:0;" title="Our MOM">
     </a>
+
     <a href="feedback.html">
       <img src="IMAGES/feedback-icon.jpg" alt="feedback.html" style="width:80px;height:80px;border:0;" title="Email us">
     </a>
