--- a/index.html
+++ b/index.html
@@ -2,39 +2,34 @@
 <html lang="en">
   <head>
     <meta charset="utf-8">
-    <title>Good  Website</title>
-    <link rel="stylesheet" type="text/css" href="STYLES/styles.css"
+    <title>Erlb88 Assignment  Website</title>
+    <link rel="stylesheet" type="text/css" href="STYLES/styles.css">
 
   </head>
+
   <body style="background-color:powderblue;">
 
     <h1 style="color:green;">WELCOME ASSIGNMENT no. 1! </h1>
 
     <a href="index.html">
       <img src="IMAGES/home-button.png" alt="index.html" style="width:80px;height:80px;border:0;" title=HOME>
+    </a>
+
+    <a href="semantic-elements1.html">
+        <img src="IMAGES/Homework.jpg" alt="semantic-elements1.html" style="width:80px;height:80px;border:0;" title=Homework>
+    </a>
 
     <a href="Lesson02-Assignment.html">
-        <img src="IMAGES/Homework.jpg" alt="Lesson02-Assignment.html" style="width:80px;height:80px;border:0;" title=Homework>
-
-
-
+      <img src="IMAGES/about-us-two-dogs.jpg" alt="Lesson02-Assignment.html" style="width:80px;height:80px;border:0;" title="About Us">
     </a>
-    <a href="semantic-elements1.html">
-      <img src="IMAGES/about-us-two-dogs.jpg" alt="semantic-elements1.html" style="width:80px;height:80px;border:0;" title="About Us">
-    </a>
+
     <a href="our-mom.html">
       <img src="IMAGES/about-mom.JPG" alt="our-mom.html" style="width:80px;height:80px;border:0;" title="Our MOM">
     </a>
+
     <a href="feedback.html">
       <img src="IMAGES/feedback-icon.jpg" alt="feedback.html" style="width:80px;height:80px;border:0;" title="Email us">
     </a>
-
-
-
-
-
-
-
 
     <p>Everything is <em>green</em></p>
     <p> Everything <strong>seen </strong></p>
@@ -57,5 +52,6 @@
       <p> Posted by: Erl Buenbrazo</p>
       <p> For HTML Assignment no.1</p>
       <p> Contact info: <a href="mailto:erlb88@uw.edu">erlb88@uw.edu</a>.</p>
+    </footer>
   </body>
 </html>
