update footer box

--- a/Lesson04-assignment.html
+++ b/Lesson04-assignment.html
@@ -23,6 +23,17 @@
 
       *{box-sizing:border-box;}
 
+       .flip {
+         height:8rem;
+         background-color: gray;
+         padding:1rem;
+         border: 5px solid gray;
+         margin-bottom;3rem;
+         margin-top;2rem;
+       }
+
+
+
       header {
       	height:10%;
       	background-color:purple;
@@ -74,6 +85,7 @@
       	float:right;
       	display:inline-block;
       	margin-right:5%;
+        margin-bottom:2%;
       }
 
       footer {
@@ -165,8 +177,8 @@
 
 
 
-      <footer>
-        <img src="IMAGES/footer-logo.png" alt="footer image" />
+      <footer class="flip">
+  <img src="IMAGES/lesson04-mock5-cat-logo.png"  alt="mock5-cat-logo " />
         <p>|assignment no4| erlbuenbrazo</p>
       </footer>
 
