--- a/Lesson04-assignment.html
+++ b/Lesson04-assignment.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title>Lesson04-Assignment-MOCKUP</title>
-
+     <link rel="stylesheet" type="text/css" href="STYLES/styles-mock.css">
     <header>
             <h1>KITTIES TO GO!</h1>
             <h3>Seattle's premier drive-thru cat rentals</h3>
@@ -18,79 +18,7 @@
 
 
     <style>
-      /*This is my styling sheet  portion*/
 
-
-      *{box-sizing:border-box;}
-
-       .flip {
-         height:8rem;
-         background-color: gray;
-         padding:1rem;
-         border: 5px solid gray;
-         margin-bottom;3rem;
-         margin-top;2rem;
-       }
-
-
-
-      header {
-      	height:10%;
-      	background-color:purple;
-      	color:white;
-      	/*margin-left:13%;*/
-      	padding:3% 13%;
-      }
-
-      header h3 {
-      	font-style:italic;
-      }
-
-      nav {
-      	background-color: lightgray;
-      	color: darkgray;
-      	padding:1em 13%;
-      }
-
-
-      section {
-      	width:51%;
-      	margin-right:1%;
-      	padding-left: 13%;
-      	float:left;
-      }
-      	section:first-of-type h4 {
-      	  color:blue;
-      	}
-      	section:first-of-type p {
-      	}
-      	section:first-of-type p a {
-      	}
-      	section h5 {
-      		color:blue;
-      		font-size:1em;
-      	}
-      	section:last-of-type h4 {
-      		color:blue;
-      	}
-      	section:last-of-type p {
-      	}
-      	section:last-of-type p a {
-      	}
-
-
-
-      sidebar {
-      	width:20%;
-      	float:right;
-      	display:inline-block;
-      	margin-right:5%;
-        margin-bottom:2%;
-      }
-
-      footer {
-        clear:both;
-      }
 
      </style>
 
