--- a/Lesson04-assignment.html
+++ b/Lesson04-assignment.html
@@ -10,7 +10,7 @@
     </header>
           <nav>
             <a href="#" target="_blank">About   /</a>
-            <a href="#" target="_blank">Rates   /</a>
+            <a href="Lesson-04.html" target="_blank">Rates   /</a>
             <a href="#" target="_blank">Liabiliity Release   /</a>
             <a href="#" target="_blank">Kitties Profiles   /</a>
             <a href="#" target="_blank">Book a Cat   /</a>
