--- a/Lesson04-rates.html
+++ b/Lesson04-rates.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8">
-    <title>RATES.HTML</title>
+    <title>Lesson04-rates.HTML</title>
      <link rel="stylesheet" type="text/css" href="STYLES/styles-mock.css">
     <header>
             <h1>KITTIES TO GO!</h1>
