update lesson04 rate html

--- a/Lesson04-rates.html
+++ b/Lesson04-rates.html
@@ -10,36 +10,28 @@
     </header>
           <nav>
             <a href="#" target="_blank">About   /</a>
-            <a href="#" target="_blank">Rates   /</a>
+            <a href="Lesson04-rates.html" target="Lesson04-rates.html">Rates  /</a>
             <a href="#" target="_blank">Liabiliity Release   /</a>
             <a href="#" target="_blank">Kitties Profiles   /</a>
             <a href="#" target="_blank">Book a Cat   /</a>
           </nav>
 
+  <style>
 
-    <style>
-
-
-     </style>
+  </style>
 
   </head>
-
 
   <body>
 
 
-
        <section>
         <article>
-          <h4>It is a long established fact that a reader will be distracted
-            tof a page when looking at its layout. </h4>
+          <h4>ou rates are super low low low low </h4>
 
 
               <p>
-                he point of using Lorem Ipsum is that it has a more-or-less normal distribution
-                 of letters, as opposed to using 'Content here, content here', making it look like
-                  readable English. Many desktop publishing packages and web page editors.
-              </p>
+                low low rate for cats age >1 </p>
 
         </article>
 
