--- a/Lesson04-assignment.html
+++ b/Lesson04-assignment.html
@@ -11,7 +11,7 @@
           <nav>
             <a href="#" target="_blank">About   /</a>
             <a href="Lesson04-rates.html" target="Lesson04-rates.html">Rates  /</a>
-            <a href="#" target="_blank">Liabiliity Release   /</a>
+            <a href="lesson04-liability.html" target="lesson04-liability.html">Liabiliity Release   /</a>
             <a href="#" target="_blank">Kitties Profiles   /</a>
             <a href="#" target="_blank">Book a Cat   /</a>
           </nav>
