update sidebar image

--- a/Lesson04-rates.html
+++ b/Lesson04-rates.html
@@ -11,7 +11,7 @@
           <nav>
             <a href="#" target="_blank">About   /</a>
             <a href="Lesson04-rates.html" target="Lesson04-rates.html">Rates  /</a>
-            <a href="#" target="_blank">Liabiliity Release   /</a>
+            <a href="lesson04-liability.html" target="lesson04-liability.html">Liabiliity Release   /</a>
             <a href="#" target="_blank">Kitties Profiles   /</a>
             <a href="#" target="_blank">Book a Cat   /</a>
           </nav>
@@ -85,7 +85,8 @@
               <a a href="#" target="_blank">Find out more >></a>
 
               <h4>CAT OF THE WEEK</h4>
-              <img src="IMAGES/lesson04-mock2-banner-image.jpg" width="350"  height="150" alt="banner image "alt="cute cat" />
+              <img src="images/lesson04-mock3-sidebar-cat.jpg" alt="Cute Gray kitten" />
+
               <p>
                 rro quisquam est qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit..." <break>
      "There is no one who loves pain itself, who seeks afte
